# adventofcode

./: Day1.hs  adventofcode2025.cabal  day1.hs
2025/haskell/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Main.hs  adventofcode2025.cabal
2025/haskell/Util/: FetchInput.hs
2025/python/: day1.py
